修改 all.css 及 index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
+<!DOCTYPE html>
 <html lang="en">
 <head> 
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width">
-    <title>Document</title>
+    <!--
+    <style>
+        p {
+            color: red;}
+        h1 {
+ 			color: blue;}
+    </style>
+    -->
+    
+    <link rel="stylesheet" href="css/all.css">
+    
+    <title>GitHub Pages 練習</title>
 </head>
 <body>
-    <p>切版完成</p>
-    <p>被 助教 釘在牆上</p>
-    <p>1px也跟我計較!</p>
-    </body>
-    </html>
+    <h1>切版練習...</h1>
+    <p>會被 助教 釘在牆上</p>
+    <p>別跟我計較!</p>
 </body>
 </html>
